[project]
name = "marine-conservation-platform"
version = "0.1.0"
description = "Marine Conservation Data Platform"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "psycopg2-binary>=2.9.5",
    "reportlab>=4.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
]
